// Copyright 2025 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "src/ray/protobuf/events/aggregator_service/add_event_request.proto";
import "src/ray/protobuf/events/aggregator_service/add_event_reply.proto";

package ray.rpc.events;

// Service for adding events to the event aggregator.
service EventAggregatorService {
  // Add events to the event aggregator.
  rpc AddEvents(AddEventRequest) returns (AddEventReply);
}
